se resuelve incidencia del mapamental 15, se da estilos al mensaje de se necesita un valor en el mapamental 15 y se traduce el letrero de se necesita un valor en todas las vistas de mapamental

--- a/tecolotl-web/src/main/webapp/alumno/mindmap/15.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/15.xhtml
@@ -87,7 +87,7 @@
                                                      id="definicion">
                                             <f:validateRequired/>
                                         </h:inputText>
-                                        <h:message for="definicion" styleClass=""/>
+                                        <h:message for="definicion" style="color: white"/>
                                     </div>
                                 </div>
                                 <div class="horizontal-form2">
@@ -98,7 +98,7 @@
                                                      id="sentencia">
                                             <f:validateRequired/>
                                         </h:inputText>
-                                        <h:message for="sentencia" styleClass=""/>
+                                        <h:message for="sentencia" style="color: white"/>
                                     </div>
                                 </div>
                                 <div class="horizontal-form3">
@@ -109,7 +109,7 @@
                                                      id="spreech">
                                             <f:validateRequired/>
                                         </h:inputText>
-                                        <h:message for="spreech" styleClass=""/>
+                                        <h:message for="spreech" style="color: white"/>
                                     </div>
                                 </div>
                             </div>
@@ -140,7 +140,7 @@
                                                      id="subfijo">
                                             <f:validateRequired/>
                                         </h:inputText>
-                                        <h:message for="subfijo" styleClass=""/>
+                                        <h:message for="subfijo" style="color: white"/>
                                     </div>
                                 </div>
                             </div>
@@ -153,7 +153,7 @@
                                                      id="prefijo">
                                             <f:validateRequired/>
                                         </h:inputText>
-                                        <h:message for="prefijo" styleClass=""/>
+                                        <h:message for="prefijo" style="color: white"/>
                                     </div>
                                 </div>
                             </div>
@@ -166,7 +166,7 @@
                                                      id="raiz">
                                             <f:validateRequired/>
                                         </h:inputText>
-                                        <h:message for="raiz" styleClass=""/>
+                                        <h:message for="raiz" style="color: white"/>
                                     </div>
                                 </div>
                             </div>
@@ -179,7 +179,7 @@
                                                      id="contexto">
                                             <f:validateRequired/>
                                         </h:inputText>
-                                        <h:message for="contexto" styleClass=""/>
+                                        <h:message for="contexto" style="color: white"/>
                                     </div>
                                 </div>
                             </div>
@@ -192,21 +192,12 @@
                                                      id="nueva-palabra">
                                             <f:validateRequired/>
                                         </h:inputText>
-                                        <h:message for="nueva-palabra" styleClass=""/>
+                                        <h:message for="nueva-palabra" style="color: white"/>
                                     </div>
                                 </div>
                             </div>
                             <div class="planet-6 orientacion letras">
                                 <div class=" posicion-planeta">
-                                    <h:outputLabel styleClass="uk-form-label" for="entrada-sinonimo" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[10].pregunta}"/>
-                                    <div class="uk-form-controls">
-                                        <h:inputText styleClass="uk-input"
-                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[10].respuesta}"
-                                                     id="entrada-sinonimo">
-                                            <f:validateRequired/>
-                                        </h:inputText>
-                                        <h:message for="entrada-sinonimo" styleClass=""/>
-                                    </div>
                                     <h:outputLabel styleClass="uk-form-label" for="entrada-antonimo" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}"/>
                                     <div class="uk-form-controls">
                                         <h:inputText value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
@@ -216,7 +207,7 @@
                                             <f:validateRequired/>
                                         </h:inputText>
                                     </div>
-                                    <h:message for="entrada-antonimo" styleClass=""/>
+                                    <h:message for="entrada-antonimo" style="color: white"/>
                                 </div>
                             </div>
                         </div>
