css y js storage

--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -205,8 +205,7 @@
         <ui:define name="file-js">
 
             <script type="text/javascript" src="https://sdk.amazonaws.com/js/aws-sdk-2.585.0.min.js"></script>
-<!--            <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/asignar-actividad.js"></script>-->
-            <h:outputScript library="js" name="/profesor/asignar-actividad.js"/>
+            <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/asignar-actividad.js"></script>
             <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/alumno/filtro.js"></script>
         </ui:define>
     </ui:composition>
