--- a/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
@@ -322,9 +322,18 @@
             </div>
         </h:panelGroup>
     </ui:define>
+
+
     <ui:define name="file-js">
+        <script type="application/javascript">
+            var apodoAlum = "#{profesor['csv.nickname']}";
+            var dateAlum = "#{profesor['csv.date']}";
+            var levelAlum = "#{profesor['csv.level']}";
+            var genderAlum = "#{profesor['csv.gender']}";
+        </script>
         <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/nah.js"></script>
-        <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/agregar-alumnos-csv.js"></script>
+<!--        <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/agregar-alumnos-csv.js"></script>-->
+        <h:outputScript library="js" name="/profesor/agregar-alumnos-csv.js"/>
         <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/agregar-alumno-modal.js"></script>
     </ui:define>
 </ui:composition>
