--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -11,9 +11,27 @@
 <h:head>
 	<title>Esquadron</title>
 	<meta name="google-site-verification" content="DLGw7JmFbDOC2lHAxcYSXxNJuYlID8QR6KrnicJ0oKI" />
+	<meta name="google" content="notranslate"/>
 	<link  rel="shortcut icon"  href="#{resource['img/favicon.ico']}"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 	<link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/estilos-landing.css"/>
+	<!-- Facebook Pixel Code -->
+	<script>
+		!function(f,b,e,v,n,t,s)
+		{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+				n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+			if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+			n.queue=[];t=b.createElement(e);t.async=!0;
+			t.src=v;s=b.getElementsByTagName(e)[0];
+			s.parentNode.insertBefore(t,s)}(window, document,'script',
+				'https://connect.facebook.net/en_US/fbevents.js');
+		fbq('init', '205181707450977');
+		fbq('track', 'PageView');
+	</script>
+	<noscript><img height="1" width="1" style="display:none"
+				   src="https://www.facebook.com/tr?id=205181707450977&amp;ev=PageView&amp;noscript=1"
+	/></noscript>
+	<!-- End Facebook Pixel Code -->
 </h:head>
 <h:body>
 	<aside>
