--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -189,7 +189,7 @@
                                 <h:message for="nombre" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
                             <div class="uk-width-1-1@s uk-width-1-4@m">
-                                <h:outputLabel value="apellidoPaterno" for="apellidoPaterno"/>
+                                <h:outputLabel value="apellido paterno" for="apellidoPaterno"/>
                                 <div class="uk-form-controls">
                                     <h:inputText id="apellidoPaterno"
                                                  class="uk-input"
@@ -201,7 +201,7 @@
                                 <h:message for="apellidoPaterno" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
                             <div class="uk-width-1-1@s uk-width-1-4@m">
-                                <h:outputLabel value="apellidoMaterno" for="apellidoMaterno"/>
+                                <h:outputLabel value="apellido materno" for="apellidoMaterno"/>
                                 <div class="uk-form-controls">
                                     <h:inputText id="apellidoMaterno"
                                                  class="uk-input"
@@ -242,7 +242,7 @@
                             </div>
                             </ui:remove>
                             <div class="uk-width-1-1@s uk-width-1-3@m">
-                                <h:outputLabel value="correoEletronico" for="correoEletronico"/>
+                                <h:outputLabel value="correo eletronico" for="correoEletronico"/>
                                 <div class="uk-form-controls">
                                     <h:inputText id="correoEletronico"
                                                  styleClass="uk-input"
@@ -267,7 +267,7 @@
                     </div>
                     <div class="uk-modal-footer uk-flex uk-flex-right">
                         <h:commandButton value="#{boton['cancel']}" styleClass="uk-button uk-button-default uk-margin-small-right uk-modal-closel">
-                            <f:ajax listener="#{administracionProfesorControlador.limpiaModelo}"
+                            <f:ajax listener="#{administracionProfesorControlador.limpiaModelo()}"
                                     onevent="function funciones(data) { cerrarModal(data, 'modalProfresor') }"
                                     render="@form"/>
                         </h:commandButton>
@@ -277,11 +277,11 @@
                                     render="@form formulario-tabla"
                                     onevent="function funcion(data) { cerrarModal(data, 'modalProfresor'); }"/>
                         </h:commandButton>
-                        <h:commandButton value="${boton['update']}" styleClass="uk-button uk-button-secondary" rendered="#{not empty administracionProfesorControlador.profesorModelo.id}">
+                        <h:commandButton value="${boton['update']}" onclick="cargaContrasenia()" styleClass="uk-button uk-button-secondary" rendered="#{not empty administracionProfesorControlador.profesorModelo.id}">
                             <f:ajax execute="@form"
-                                    listener="#{administracionProfesorControlador.actualiza}"
+                                    listener="#{administracionProfesorControlador.actualiza()}"
                                     render="@form formulario-tabla"
-                                    onevent="function funcion(data) { cerrarModal(data, 'modalProfresor') }"/>
+                                    onevent="function funcion(data) { cerrarModal(data, 'modalProfresor');  }"/>
                         </h:commandButton>
                     </div>
                 </h:form>
