Solucion de la incidencia 41

--- a/tecolotl-web/src/main/webapp/administracion/ciclos-escolares.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/ciclos-escolares.xhtml
@@ -164,6 +164,7 @@
                                                  pt:oninput="entradaFecha(event)"
                                                  pt:placeholder="dd/MM/yyyy"
                                                  styleClass="uk-input"
+                                                 binding="#{ciclosEscolaresControlador.htmlInputText}"
                                                  autocomplete="off">
                                         <f:validateRequired/>
                                         <f:convertDateTime pattern="dd/MM/yyyy"/>
