--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -168,7 +168,7 @@
                             <f:facet name="header"><span class="letra-tabla uk-text-bold">#{etiqueta['options']}</span></f:facet>
                             <div class="uk-inline  ">
                                 <button class="uk-icon-button puntero" uk-icon="more-vertical" type="button"/>
-                                <div uk-dropdown="boundary:.tabla-profesor-dropdown; mode: click" id="dropear" >
+                                <div uk-dropdown="boundary:.tabla-profesor-dropdown; mode: click" id="dropear" style="min-width: 150px">
                                     <ul class="uk-nav uk-dropdown-nav uk-text-left">
                                         <li>
                                             <h:link outcome="alumnos" styleClass="uk-text-primary" >
@@ -182,6 +182,13 @@
                                                 <h:link outcome="asignar-tarea" styleClass="uk-text-primary">
                                                     <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/gramatica.svg" alt="gramatica" width="20"/>
                                                     <span class="uk-text-middle"><h:outputText value="#{profesor['assign.activity.title']}"/></span>
+                                                    <f:param name="grupo" value="#{grupo.id}"/>
+                                                </h:link>
+                                            </li>
+                                            <li>
+                                                <h:link outcome="asignar-tarea" styleClass="uk-text-primary">
+                                                    <h:outputText pt:uk-icon="icon: trash" styleClass="uk-margin-small-right uk-icon" />
+                                                    <span class="uk-text-middle"><h:outputText value="delete hw"/></span>
                                                     <f:param name="grupo" value="#{grupo.id}"/>
                                                 </h:link>
                                             </li>
