--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -136,7 +136,7 @@
                                             <img class="img-previa" src="https://i.ytimg.com/vi/${tareaAlumno.idActividad}/mqdefault.jpg" alt=""/>
                                                 <h:panelGroup layout="block" pt:uk-dropdown="mode: click; boundary: .tabla-profesor-dropdown" styleClass="uk-dropdown">
                                                     <ul class="uk-nav uk-dropdown-nav">
-                                                        <li ><h:outputLink><h:outputText styleClass="uk-icon uk-margin-small-right" pt:uk-icon="icon: trash"/>delete</h:outputLink></li>
+                                                        <li ><h:outputLink value="#eliminar-tarea" pt:uk-toggle=""><h:outputText styleClass="uk-icon uk-margin-small-right" pt:uk-icon="icon: trash"/>delete</h:outputLink></li>
                                                     </ul>
                                                 </h:panelGroup>
                                             </div>
@@ -274,12 +274,17 @@
         </section>
 
         <div id="eliminar-tarea" class="uk-flex-top" uk-modal="">
-            <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
-
-                <button class="uk-modal-close-default" type="button" uk-close=""/>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+            <div class="uk-modal-dialog uk-margin-auto-vertical">
+                <div class="uk-modal-header " style="background-color: var(--color-peligro)">
+                    <h2 class="uk-modal-title " style="color: white">delete homework</h2>
+                </div>
+                <div class="uk-modal-body " style="border-bottom-color: var(--color-peligro) ">
+                    <p>esta seguro que desea eliminar esta tarea, se eliminaran todos los avances previos del alumno</p>
+                </div>
+                <div class="uk-modal-footer uk-text-right">
+                    <button class="uk-button uk-button-default uk-modal-close" type="button">Cancel</button>
+                    <button class="uk-button " style="background-color: var(--color-peligro); color: white" type="button">Save</button>
+                </div>
             </div>
         </div>
         <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/Chart.js"></script>
