--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -282,8 +282,8 @@
                     <p>esta seguro que desea eliminar esta tarea, se eliminaran todos los avances previos del alumno</p>
                 </div>
                 <div class="uk-modal-footer uk-text-right">
-                    <button class="uk-button uk-button-default uk-modal-close" type="button">Cancel</button>
-                    <button class="uk-button " style="background-color: var(--color-peligro); color: white" type="button">Save</button>
+                    <button class="boton-escuadron-base-secundary uk-modal-close" type="button">Cancel</button>
+                    <button class="boton-escuadron-base " style="background-color: var(--color-peligro); color: white" type="button">delate</button>
                 </div>
             </div>
         </div>
